--- a/src/style.styl
+++ b/src/style.styl
@@ -4,7 +4,7 @@
   width auto
   margin 0 auto
   padding 15px
-  background-color gold
+  background-color black
   font-family: 'Roboto', sans-serif;
 
 .window__h1
@@ -12,6 +12,7 @@
   padding 0
   text-align center
   letter-spacing 2px
+  color white
 
 .window__game
   display flex
@@ -37,7 +38,7 @@
   cursor pointer
 
   &:hover
-    background-color black
+    background-color purple
     color white
 
 .window__row
@@ -48,13 +49,13 @@
   display inline-block
   width 20px
   height 20px
-  margin 0px 2px
-  background-color black
-  border-radius 2px
+  margin -2px 0px
+  border black 1px solid
+  background-color purple
   cursor pointer
 
   &:hover
-    background-color red
+    border white 1px solid
 
 .window__cell_enable
   background-color white
@@ -70,7 +71,7 @@
   border 0
   outline 0
   border-radius 2px
-  background-color black
+  background-color purple
   font-size 0.9rem
   color white
   cursor pointer
