--- a/src/main.pug
+++ b/src/main.pug
@@ -2,6 +2,6 @@ div.window
   h1.window__h1 Life
   div.window__game
   div.window__controller
-    input(value = numberOfRowsPug).window__input
+    input(value = numberOfRows).window__input
     button.window__button.window__button_play Play
     button.window__button.window__button_clear Clear
